fixed spacing for the social and the links

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -6,6 +6,9 @@
     }
 
     &--social {
+
+        margin-top: 1rem !important;
+
         &--icons {
             font-size: 24px !important;
         }
